--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,6 +35,18 @@ li {
   text-align: center;
   margin: 3% 0;
 }
+table {
+  width: 100%;
+  border: 1px solid gray;
+  text-align: center;
+  margin: 2% 0;
+}
+tr {
+  border: 1px solid gray;
+}
+td {
+  margin: 4% 0;
+}
 /* .home .sliderContainer {
   overflow: hidden;
   height: 800px;
