more style changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,3 +141,10 @@ td {
   justify-content: space-between;
   align-items: center;
 }
+
+.button-head-birds {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 3%;
+}
