--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,8 +60,10 @@ td {
   color: white;
   height: 100%;
 }
-.card-body {
-  justify-content: center;
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 /* .home .sliderContainer {
   overflow: hidden;
