--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,9 @@ header a:hover {
   background-size: cover;
   background-image: url("https://images.unsplash.com/photo-1486365227551-f3f90034a57c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
 }
+.about {
+  
+}
 .titles {
   width: 30%;
   margin-left: 5%;
@@ -206,4 +209,27 @@ footer img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+.about {
+  display: flex;
+  margin-top: 7%;
+  margin-bottom: 7%;
+}
+.about div {
+  width: 100%;
+}
+.text{
+  margin-left: 3%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.image-container img {
+  width: 75%;
 }
