fixed footer on bird and sighting form

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -240,3 +240,11 @@ footer img {
 .image-container img {
   width: 75%;
 }
+#sighting-form {
+  margin-top: 5%;
+  margin-bottom: 2%;
+}
+#bird-form {
+  margin-top:8%;
+  margin-bottom: 13%;
+}
